--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
         <button>전쟁</button>
         <button>서부</button>
     </div>
+    <div id="movie_information">
+        <div id="information_title">
+            <p></p>
+            <button><i class="fa-solid fa-x" style="background-color:white;"></i></button>
+        </div>
+        <div id="information_section">
+            <img src=>
+            <div id="movie_star">
+            </div>
+            <div id="movie_rating"></div>
+            <p></p>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/afd0d34fd5.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
