--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="block" onclick="movieInformation()"></div>
     <div id="container">
         <div id="miniButton">
             <button onclick="SubCategory(1)"><i class="fa-solid fa-bars"></i></button>
@@ -94,11 +95,6 @@
             <button><i class="fa-solid fa-x" style="background-color:white;"></i></button>
         </div>
         <div id="information_section">
-            <img src=>
-            <div id="movie_star">
-            </div>
-            <div id="movie_rating"></div>
-            <p></p>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/afd0d34fd5.js" crossorigin="anonymous"></script>
