--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="block" onclick="movieInformation()"></div>
+    <div id="block" onclick="movieInformation(-2)"></div>
     <div id="container">
         <div id="miniButton">
             <button onclick="SubCategory(1)"><i class="fa-solid fa-bars"></i></button>
